# learningPyTorch

./: .gitignore  README.md  pyproject.toml
01 - LinearRegressionModel/: main.py  model.py
02 - NeuralNetworkClassification/Binary Classification/: config.py  main.py
02 - NeuralNetworkClassification/Multi-class Classification/: main.py
03 - ComputerVision/: train.py
04 - CustomDatasets/: basics.ipynb  models.ipynb  more_models.ipynb  transfer_learning.ipynb
modules/: data_setup.py  engine.py  model_builder.py  train.py  utils.py
src/00 - Fundamentals/: main.py
src/02 - Neural Network Classification/Binary Classification/: data_loader.py  model.py
src/03 - Computer Vision/: evaluation.py  main.py
src/03_computer_vision/: models.py
src/04 - Custom Datasets/: more_models.ipynb
src/04 - CustomDatasets/: models.ipynb
src/04_custom_datasets/: transfer_learning.ipynb
src/05 - Going Modular/: modules_notebook.ipynb
src/05_going_modular/: OUTDATED_modules_notebook.ipynb
src/06_transfer_learning/: transfer_learning_doneright.ipynb
src/07_experiment_tracking/: basics.ipynb  best_model.ipynb  experiments.py
src/08_paper_replicating/: ViT_paper_replication.ipynb  pretrained_ViT.py  theory_and_history.ipynb
src/09_model_deployment/: OUTDATED_deploying_effnetb2.ipynb  OUTDATED_deploying_food101.ipynb  comparing_models.ipynb  effnetb2_demo.py  gastrovision_big_experimenting.ipynb
src/09_model_deployment/demos/OUTDATED_gastrovision_big/: app.py  model.py  requirements.txt
trained_models/: FashionMNISTModelV2.pth  LinearRegressionModel.pth
(+1 files in other folders)
